# brynhild-harness

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.cursor/rules/: co-design-mode.mdc  coding-standards.mdc  commit-plans.mdc  empty-user-prompt.mdc  markdown-frontmatter.mdc  no-autonomous-git-commits.mdc  python-environment.mdc  testing-models.mdc  testing-policy.mdc  workflow-folder.mdc
docs/: api-reference.md  architecture-overview.md  migration-guide.md  plugin-api-reference.md  plugin-development-guide.md  plugin-migration-notes.md  plugin-tool-interface.md  tool-error-handling.md  tool-permissions.md  tool-registry.md  tool-testing.md
examples/plugins/calculator/: README.md  plugin.yaml
examples/plugins/entry-point-template/: README.md  pyproject.toml
examples/plugins/entry-point-template/src/brynhild_my_plugin/: __init__.py  commands.py  hooks.py  providers.py  rules.py  skills.py  tools.py
scripts/: bundle-sources  commit-helper  find_constants.py  interact.py
src/brynhild/: __init__.py  __main__.py  constants.py
src/brynhild/api/: __init__.py  base.py  credentials.py  factory.py  ollama_provider.py  openrouter_provider.py  types.py
src/brynhild/builtin_skills/: __init__.py
src/brynhild/cli/: __init__.py  dev.py  main.py
src/brynhild/config/: __init__.py  model_aliases.py  settings.py  sources.py  types.py
src/brynhild/core/: __init__.py  context.py  conversation.py  message_validators.py  prompts.py  token_tracker.py  tool_executor.py  tool_recovery.py  types.py
src/brynhild/hooks/: __init__.py  compaction.py  config.py  events.py  manager.py  matching.py  stuck.py
src/brynhild/logging/: __init__.py  conversation_logger.py  markdown_logger.py  reader.py
src/brynhild/plugins/: __init__.py  commands.py  discovery.py  hooks.py  lifecycle.py  loader.py  manifest.py  profiles.py  providers.py  registry.py  rules.py  stubs.py  tools.py
src/brynhild/profiles/: __init__.py  manager.py  types.py
src/brynhild/session/: __init__.py  session.py
src/brynhild/skills/: __init__.py  discovery.py  loader.py  preprocessor.py  registry.py  skill.py
src/brynhild/tools/: __init__.py  base.py  bash.py  file.py  finish.py  glob.py  grep.py  inspect.py  registry.py  sandbox.py  sandbox_linux.py  skill.py
src/brynhild/ui/: __init__.py  adapters.py  app.py  base.py  icons.py  json_renderer.py  plain.py  rich_renderer.py  runner.py  tokenizer.py  widgets.py
src/brynhild/utils/: __init__.py
tests/: __init__.py  conftest.py  test_coding_standards.py
tests/api/: __init__.py  test_credentials_path.py  test_message_format_bugs.py  test_providers.py  test_tool_use.py
tests/cli/: test_main.py
tests/config/: test_model_identity.py  test_model_registry.py  test_settings.py  test_settings_integration.py  test_site_deployment_config.py  test_sources.py  test_types.py
tests/core/: __init__.py  test_context.py  test_conversation.py  test_conversation_tokens.py  test_edge_case_bugs.py  test_hook_injection.py  test_message_validators.py  test_prompts.py  test_tool_executor.py  test_tool_recovery.py
tests/e2e/: __init__.py  test_cli_chat.py  test_cli_config.py  test_cli_hooks.py  test_cli_session.py  test_cli_tools.py  test_plugin_operations.py
tests/fixtures/plugins/entry-point-complete-plugin/: pyproject.toml
tests/fixtures/plugins/entry-point-complete-plugin/src/brynhild_test_complete/: __init__.py  commands.py  hooks.py  providers.py  rules.py  skills.py  tools.py
tests/fixtures/plugins/entry-point-test-plugin/: pyproject.toml
tests/fixtures/plugins/entry-point-test-plugin/src/brynhild_test_plugin/: __init__.py  tools.py
tests/fixtures/profiles/: test-model.yaml
tests/fixtures/rules/: .cursorrules  (+1 more)
tests/hooks/: __init__.py  test_command_executor.py  test_compaction.py  test_config.py  test_events.py  test_integration.py  test_manager.py  test_matching.py  test_prompt_executor.py  test_script_executor.py  test_stuck.py
tests/integration/: __init__.py  test_builtin_skills_integration.py  test_config_session.py  test_entry_point_all_features.py  test_entry_point_integration.py  test_hook_injection.py  test_logging_integration.py  test_plugin_complete.py  test_plugin_lifecycle_hooks.py  test_plugin_providers_factory.py  test_plugin_skills_integration.py  test_plugin_tools_registry.py  test_profile_integration.py  test_provider_conversation.py  test_provider_instances.py  test_rules_integration.py  test_skill_injection.py  test_skills_integration.py  test_streaming_tokens.py  test_tool_recovery_integration.py  test_tools_conversation.py
tests/live/: __init__.py  test_live_basic.py  test_live_conversation.py  test_live_models.py  test_live_ollama.py  test_live_profiles.py  test_live_reasoning_level.py  test_live_smoke.py  test_live_tools.py  test_openrouter_models.py  test_tool_roundtrip.py  test_tool_use_subclass.py
tests/logging/: __init__.py  test_markdown_logger.py
tests/plugins/: __init__.py  test_commands.py  test_discovery.py  test_entry_point_discovery.py  test_entry_point_schema_validation.py  test_hooks.py  test_loader.py  test_manifest.py  test_phase1_extensions.py  test_phase1_integration.py  test_plugin_profiles.py  test_providers.py  test_registry.py  test_rules.py  test_tools.py
tests/profiles/: __init__.py  test_profiles.py
tests/session/: test_session.py
tests/skills/: __init__.py  test_discovery.py  test_loader.py  test_registry.py  test_skill.py
tests/system/: __init__.py  test_hook_chain.py  test_tool_pipeline.py
tests/tools/: __init__.py  test_disabled_tools.py  test_finish.py  test_inspect.py  test_sandbox.py  test_skill_tool.py  test_tools.py
tests/ui/: __init__.py  test_adapters.py  test_icons.py  test_json_renderer_bugs.py  test_renderers.py  test_runner.py  test_tokenizer.py  test_tui.py
tests/utils/: __init__.py  test_dcm_audit_v2_issues.py  test_dcm_audit_v3_issues.py  test_dcm_known_issues.py  test_dcm_yaml.py  test_dcm_yaml_integration.py  test_deep_chain_map.py  test_deep_chain_map_edge.py  test_deep_chain_map_v2.py  test_frozen.py
(+58 files in other folders)
